--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
@@ -46,22 +47,25 @@
                     <div class="carousel-item active">
                         <img src="img/slider-1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            <h6>DINING AT</h6>
+                            <h2>Better Half</h2>
+                            <p>We offer a highly seasonal and continuously evolving tasting menu experience.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/slider-2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <h6>HAPPY HOURS AT</h6>
+                            <h2>Better Half</h2>
+                            <p>We offer a highly seasonal and continuously evolving tasting menu experience.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/slider-3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                            <h6>EVENTS AT</h6>
+                            <h2>Better Half</h2>
+                            <p>We offer a highly seasonal and continuously evolving tasting menu experience.</p>
                         </div>
                     </div>
                 </div>
